<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChooseCategoryActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbarcolor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:backgroundTint="@color/skyblue"
            app:cardCornerRadius="@dimen/_15sdp"
            android:elevation="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/layoutTea"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgTea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/tea_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgTea"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/tea"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </RelativeLayout>



        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/skyblue"
            app:cardCornerRadius="@dimen/_15sdp"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/layoutWater"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/water_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgWater"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/water"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>



</LinearLayout>