<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/lightgrey"
    app:strokeWidth="@dimen/_2sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:id="@+id/cardViewTea"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvNameTea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="Kristian Watson"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvDrinkType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tea"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/tvTotalTea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_5sdp"/>

                <TextView
                    android:id="@+id/tvTotalCoffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addTea"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/add"
                android:textAllCaps="false"
                app:backgroundTint="@color/actionbarcolor"
                app:cornerRadius="@dimen/_5sdp" />

            <ImageButton
                android:id="@+id/btnDeleteCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_moremenu" />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>