<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbarcolor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/addCustomerTea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutTea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        app:tabIndicatorColor="@color/actionbarcolor"
        app:tabIndicatorHeight="@dimen/_2sdp"
        app:tabMode="fixed"
        app:tabIndicatorFullWidth="false"
        app:tabSelectedTextColor="@color/tab_selected"
        app:tabTextColor="@color/tabtext"
        android:background="@color/skyblue"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
        android:layout_marginTop="@dimen/_15sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerTea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"/>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="0.6"
                android:background="@drawable/shadow_corner"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCustomerListTea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_list"
                    android:textColor="@color/black"
                    android:visibility="visible"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCustomerListTea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    tools:listitem="@layout/activity_recyclerview_customerlist_tea"/>

                <TextView
                    android:id="@+id/tvAddCustomerTea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="Please Add Customer"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>