<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbarcolor">

        <ImageView
            android:id="@+id/backBtnProfileWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_gravity="start"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvProfileWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/btnSaveProfileWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="end"
            android:gravity="end"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"/>

        <ImageView
            android:id="@+id/btnEditProfileWater"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/ic_edit_profile"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_12sdp"/>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_margin="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_person"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"/>

                    <EditText
                        android:id="@+id/etOwnerNameWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/owner_name"
                        android:padding="@dimen/_10sdp"
                        android:enabled="false"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_office"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"/>

                    <EditText
                        android:id="@+id/etShopNameWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/shop_name"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:enabled="false"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_call"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"/>

                    <EditText
                        android:id="@+id/etPhoneNumberWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/phone_number"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:enabled="false"
                        android:maxLength="10"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/ic_location"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_13sdp"/>

                    <EditText
                        android:id="@+id/etAddressWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="Address"
                        android:padding="@dimen/_10sdp"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/ic_gst"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"/>

                    <EditText
                        android:id="@+id/etGSTnumberWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/gst_number"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/imgCameraWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgCamerafinalWater"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:background="@drawable/ic_camera"
                    android:layout_margin="@dimen/_10sdp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchCompatWaterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:text="@string/switch_section"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/inter_regular"
                        android:maxLines="1"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchCompatWater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:thumb="@drawable/thumb_selector"
                        app:track="@drawable/track_selector"
                        android:layout_gravity="end"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_15sdp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/imgQRCodeWater"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgQRCODEfinalWater"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:scaleType="fitCenter"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>